cluster/apps/pgadmin/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pgadmin
  labels:
    app: pgadmin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:6.4
          ports:
            - name: pod-http-port
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: data
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "400m"
              memory: "800Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pgadmin
