cluster/apps/pgadmin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  labels:
    app: pgadmin
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.zzd.ai/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.zzd.ai/oauth2/start?rd=https://$host$uri"
    hajimari.io/enable: "true"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pgadmin.zzd.ai
      secretName: my-certs-pgadmin
  rules:
    - host: pgadmin.zzd.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 8080
